syntax = "proto3";
package stwartchain.referral;

option go_package = "github.com/stalwart-algoritmiclab/stwart-chain-go/x/referral/types";

message User {
  string accountAddress = 1; 
  string referrer = 2; 
  repeated string referrals = 3;
}

